--- a/eng/common/TestResources/deploy-test-resources.yml
+++ b/eng/common/TestResources/deploy-test-resources.yml
@@ -11,6 +11,7 @@ parameters:
   UseFederatedAuth: true
   PersistOidcToken: false
   SelfContainedPostScript: self-contained-test-resources-post.ps1
+  UseHttpTransport: false
 
 # SubscriptionConfiguration will be splatted into the parameters of the test
 # resources script. It should be JSON in the form:
@@ -108,6 +109,7 @@ steps:
             -SelfContainedPostScript $postScriptPath `
             -CI `
             -Force `
+            -UseHttpTransport:('${{ parameters.UseHttpTransport }}' -eq 'true') `
             -Verbose | Out-Null
 
     - ${{ if eq(parameters.PersistOidcToken, true) }}:
@@ -153,6 +155,7 @@ steps:
           -CI `
           -ServicePrincipalAuth `
           -Force `
+          -UseHttpTransport:('${{ parameters.UseHttpTransport }}' -eq 'true') `
           -Verbose | Out-Null
       displayName: 🚀 Deploy test resources
       env:
