[Onboard] Add support for Compute Resource Provider - Limited to VM and VMSS get operations (#1482)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -107,6 +107,13 @@
 # ServiceLabel: %tools-Communication
 # ServiceOwners:                       @kirill-linnik @kagbakpem @arazan
 
+# PRLabel: %tools-Compute
+/tools/Azure.Mcp.Tools.Compute/         @g2vinay @haagha @audreytoney @microsoft/azure-mcp
+
+# ServiceLabel: %tools-Compute
+# ServiceOwners:                       @haagha @audreytoney @saakpan
+
+
 # PRLabel: %tools-CosmosDB
 /tools/Azure.Mcp.Tools.Cosmos/         @sajeetharan @xiangyan99 @microsoft/azure-mcp
 
