--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ generated/
 eng/tools/ToolDescriptionEvaluator/prompts.json
 eng/tools/ToolDescriptionEvaluator/results.md
 eng/tools/ToolDescriptionEvaluator/tools.json
+deploy-log.txt
