Azure Retail Pricing MCP Tool (#1621)
* Get Azure Retail Pricing MCP Tool

* fixed recorded tests and tool description

* fuxed unit testcases

* fix: update live test to require SKU when service is provided

* copilot review comments

* added codeowners and changelog entry

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -306,6 +306,12 @@
 # ServiceLabel: %tools-ResourceHealth
 # ServiceOwners:                       @pkaza-msft @microsoft/azure-mcp
 
+# PRLabel: %tools-Price
+/tools/Azure.Mcp.Tools.Pricing/      @anannya03 @microsoft/azure-mcp
+
+# ServiceLabel: %tools-Price
+# ServiceOwners:                     @anannya03
+
 ##################
 # Fabric MCP
 ##################
