--- a/eng/pipelines/templates/variables/image.yml
+++ b/eng/pipelines/templates/variables/image.yml
@@ -3,6 +3,8 @@
 variables:
   - name: LINUXPOOL
     value: azsdk-pool
+  - name: LINUXARMPOOL
+    value: azsdk-pool-arm64
   - name: WINDOWSPOOL
     value: azsdk-pool
   - name: MACPOOL
@@ -10,6 +12,8 @@ variables:
 
   - name: LINUXVMIMAGE
     value: ubuntu-24.04
+  - name: LINUXARMVMIMAGE
+    value: azure-linux-3-arm64
   - name: WINDOWSVMIMAGE
     value: windows-2022
   - name: MACVMIMAGE
