--- a/eng/pipelines/templates/common.yml
+++ b/eng/pipelines/templates/common.yml
@@ -132,7 +132,8 @@ extends:
           - template: /eng/pipelines/templates/variables/image.yml
           - template: /eng/pipelines/templates/variables/globals.yml
           jobs:
-          - template: /eng/pipelines/templates/jobs/release.yml
+          # TODO: Revert to release.yml after Docker ARM64 testing
+          - template: /eng/pipelines/templates/jobs/release-anu.yml
             parameters:
               ServerName: ${{ parameters.ServerName }}
               IncludeNative: false
