With docker-build running for multiple architecture, use architecture-specific dir name for artifacts to avoid conflict

--- a/eng/pipelines/templates/jobs/docker/build-docker.yml
+++ b/eng/pipelines/templates/jobs/docker/build-docker.yml
@@ -75,4 +75,4 @@ jobs:
     displayName: Publish Docker artifacts
     inputs:
       path: $(Build.ArtifactStagingDirectory)
-      artifact: docker_output
+      artifact: docker_output_$(Architecture)
