Add checkout to release job for Publish-DockerImages.ps1 access

--- a/eng/pipelines/templates/jobs/docker/release-docker.yml
+++ b/eng/pipelines/templates/jobs/docker/release-docker.yml
@@ -36,6 +36,8 @@ jobs:
     runOnce:
       deploy:
         steps:
+        - checkout: self
+
         - task: AzureCLI@2
           displayName: Login to ${{ parameters.ContainerRegistry }}
           inputs:
