--- a/eng/pipelines/templates/variables/image.yml
+++ b/eng/pipelines/templates/variables/image.yml
@@ -8,10 +8,19 @@ variables:
   - name: MACPOOL
     value: Azure Pipelines
 
+  - name: LINUXARM64POOL
+    value: azsdk-pool
+  - name: WINDOWSARM64POOL
+    value: azsdk-pool
+
   - name: LINUXVMIMAGE
     value: ubuntu-24.04
+  - name: LINUXARM64VMIMAGE
+    value: ubuntu-22.04-arm64
   - name: WINDOWSVMIMAGE
     value: windows-2022
+  - name: WINDOWSARM64VMIMAGE
+    value: windows-2022-arm64-1espt
   - name: MACVMIMAGE
     value: macos-latest
 
