forgot to update to the new pool name!

--- a/eng/pipelines/templates/variables/image.yml
+++ b/eng/pipelines/templates/variables/image.yml
@@ -9,9 +9,9 @@ variables:
     value: Azure Pipelines
 
   - name: LINUXARM64POOL
-    value: azsdk-pool
+    value: azsdk-pool-arm64
   - name: WINDOWSARM64POOL
-    value: azsdk-pool
+    value: azsdk-pool-arm64
 
   - name: LINUXVMIMAGE
     value: ubuntu-24.04
