Updated release-mcpb.yml to use inline PowerShell

--- a/eng/pipelines/templates/jobs/mcpb/release-mcpb.yml
+++ b/eng/pipelines/templates/jobs/mcpb/release-mcpb.yml
@@ -39,16 +39,71 @@ jobs:
     runOnce:
       deploy:
         steps:
-        - checkout: self
+        # Note: checkout is not allowed in release jobs, so we inline the script logic here
+        - pwsh: |
+            $ErrorActionPreference = "Stop"
+            $serverName = '${{ parameters.ServerName }}'
+            $mcpbPath = '$(Pipeline.Workspace)/mcpb'
+            $buildInfoPath = '$(Pipeline.Workspace)/build_info/build_info.json'
 
-        - task: Powershell@2
+            Write-Host "Loading build info from $buildInfoPath..."
+            $buildInfo = Get-Content -Raw -Path $buildInfoPath | ConvertFrom-Json
+
+            $server = $buildInfo.servers | Where-Object { $_.name -eq $serverName } | Select-Object -First 1
+            if (-not $server) {
+                Write-Error "Server '$serverName' not found in build info."
+                exit 1
+            }
+
+            $version = $server.version
+            $tag = $server.releaseTag
+
+            Write-Host "Server: $serverName"
+            Write-Host "Version: $version"
+            Write-Host "Release Tag: $tag"
+
+            # Find MCPB files for this server
+            $serverMcpbPath = Join-Path $mcpbPath $serverName
+            if (-not (Test-Path $serverMcpbPath)) {
+                Write-Error "No MCPB files found for $serverName at $serverMcpbPath"
+                exit 1
+            }
+
+            $mcpbFiles = Get-ChildItem -Path $serverMcpbPath -Filter "*.mcpb" -Recurse
+
+            if ($mcpbFiles.Count -eq 0) {
+                Write-Error "No .mcpb files found in $serverMcpbPath"
+                exit 1
+            }
+
+            Write-Host "`nUploading $($mcpbFiles.Count) MCPB file(s) to release $tag..."
+
+            $uploadedCount = 0
+            $failedCount = 0
+
+            foreach ($mcpb in $mcpbFiles) {
+                Write-Host "  Uploading: $($mcpb.Name) ($($mcpb.Length) bytes)"
+                
+                & gh release upload $tag $mcpb.FullName --clobber
+                
+                if ($LASTEXITCODE -ne 0) {
+                    Write-Error "Failed to upload $($mcpb.Name)"
+                    $failedCount++
+                } else {
+                    $uploadedCount++
+                }
+            }
+
+            Write-Host "`nUpload Summary:"
+            Write-Host "  Uploaded: $uploadedCount"
+            Write-Host "  Failed: $failedCount"
+
+            if ($failedCount -gt 0) {
+                Write-Error "Some MCPB files failed to upload"
+                exit 1
+            }
+
+            Write-Host "`n✓ All MCPB files uploaded successfully"
           displayName: "Upload MCPB to GitHub Release"
-          inputs:
-            pwsh: true
-            filePath: $(Build.SourcesDirectory)/eng/scripts/Publish-McpbToGitHub.ps1
-            arguments: >
-              -ServerName '${{ parameters.ServerName }}'
-              -McpbPath '$(Pipeline.Workspace)/mcpb'
-              -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
           env:
             GH_TOKEN: $(azuresdk-github-pat)
