--- a/eng/pipelines/templates/variables/image.yml
+++ b/eng/pipelines/templates/variables/image.yml
@@ -16,7 +16,7 @@ variables:
   - name: LINUXVMIMAGE
     value: ubuntu-24.04
   - name: LINUXARM64VMIMAGE
-    value: ubuntu-22.04-arm64
+    value: azsdk-pool-mms-mariner-2-arm-1espt
   - name: WINDOWSVMIMAGE
     value: windows-2022
   - name: WINDOWSARM64VMIMAGE
