--- a/eng/pipelines/templates/jobs/sign-and-pack.yml
+++ b/eng/pipelines/templates/jobs/sign-and-pack.yml
@@ -139,6 +139,6 @@ jobs:
         - PackNpm
         - PackNuget
         - ${{ if parameters.PackageDocker }}:
-          - BuildDockerImages
+          - BuildDockerImage
       TestTimeoutInMinutes: 10
       PackageDocker: ${{ parameters.PackageDocker }}
