--- a/tools/Azure.Mcp.Tools.Quota/src/Azure.Mcp.Tools.Quota.csproj
+++ b/tools/Azure.Mcp.Tools.Quota/src/Azure.Mcp.Tools.Quota.csproj
@@ -26,7 +26,10 @@
     <PackageReference Include="Azure.ResourceManager.CognitiveServices" />
     <PackageReference Include="Azure.ResourceManager.Search" />
     <PackageReference Include="Azure.ResourceManager.Storage" />
+    <PackageReference Include="Azure.ResourceManager.MySql" />
     <PackageReference Include="Azure.ResourceManager.PostgreSql" />
+    <PackageReference Include="Azure.ResourceManager.Sql" />
+    <PackageReference Include="Azure.ResourceManager.CosmosDB" />
     <PackageReference Include="YamlDotNet" />
   </ItemGroup>
 </Project>
