--- a/eng/pipelines/templates/jobs/mcpb/pack-and-sign-mcpb.yml
+++ b/eng/pipelines/templates/jobs/mcpb/pack-and-sign-mcpb.yml
@@ -21,10 +21,6 @@ jobs:
   displayName: "Sign and Pack MCPB"
   dependsOn: ${{ parameters.DependsOn }}
   condition: and(succeeded(), ne(variables['NoPackagesChanged'], 'true'))
-  pool: #  TODO (vcolin7): Do we need a Windows pool here? Other YAML jobs don't specify OS for packaging.
-    name: $(WINDOWSPOOL)
-    image: $(WINDOWSVMIMAGE)
-    os: windows
   steps:
   - checkout: self
 
@@ -36,18 +32,19 @@ jobs:
     displayName: "Download binaries_signed"
     artifact: binaries_signed
 
-  - task: UseDotNet@2 # TODO (vcolin7): Do we need to specify this?
-    displayName: "Use .NET SDK from global.json"
+  # Use .NET SDK 8.0.x to run the MCPB CLI, which currently targets .NET 8.0 for its tool and runtime
+  - task: UseDotNet@2
+    displayName: "Use .NET SDK 8.0.x"
     retryCountOnTaskFailure: 3
     inputs:
-      useGlobalJson: true
+      packageType: sdk
+      version: 8.0.x
 
   - pwsh: |
       Write-Host "Installing MCPB CLI (.NET global tool)..."
       dotnet tool install --global Mcpb.Cli
       
-      # Add .NET tools to PATH for this session
-      # TODO (vcolin7): Is this needed in Azure Pipelines tasks?
+      # Add .NET tools to PATH for this session so we can use the 'mcpb' command directly
       $env:PATH = "$env:USERPROFILE\.dotnet\tools;$env:PATH"
       mcpb --version
     displayName: "Install MCPB CLI"
