--- a/eng/pipelines/templates/jobs/docker/build-docker.yml
+++ b/eng/pipelines/templates/jobs/docker/build-docker.yml
@@ -5,15 +5,15 @@ parameters:
   type: string
 
 jobs:
-- job: BuildDockerImages
-  displayName: "Build Docker Images"
+- job: BuildDockerImage
+  displayName: "Build Docker Image"
   dependsOn: ${{ parameters.DependsOn }}
   condition: and(succeeded(), ne(${{ parameters.ServerMatrix }}, '{}'))
   strategy:
     matrix: $[ ${{ parameters.ServerMatrix }}]
   pool:
-    name: $(LINUXPOOL)
-    image: $(LINUXVMIMAGE)
+    name: $(Pool)
+    image: $(VMImage)
     os: linux
 
   steps:
@@ -30,7 +30,7 @@ jobs:
       echo "Listing $(ArtifactPath) contents:"
       ls -la "$(Pipeline.Workspace)/docker_staging/$(ArtifactPath)/"
       echo ""
-      echo "Listing linux-x64 contents:"
+      echo "Listing $(Platform) contents:"
       ls -la "$(Pipeline.Workspace)/docker_staging/$(ArtifactPath)/$(Platform)"
       echo ""
       echo "Listing dist contents:"
@@ -67,12 +67,12 @@ jobs:
 
       # Save image as .tar
       echo "Saving image"
-      docker save "$(DockerLocalTag)" -o "$(Build.ArtifactStagingDirectory)/$(CliName)-image.tar"
-      ls -lh "$(Build.ArtifactStagingDirectory)/$(CliName)-image.tar"
+      docker save "$(DockerLocalTag)" -o "$(Build.ArtifactStagingDirectory)/$(CliName)-$(Architecture)-image.tar"
+      ls -lh "$(Build.ArtifactStagingDirectory)/$(CliName)-$(Architecture)-image.tar"
     displayName: Capture image digest and save as .tar
 
   - task: 1ES.PublishPipelineArtifact@1
     displayName: Publish Docker artifacts
     inputs:
       path: $(Build.ArtifactStagingDirectory)
-      artifact: docker_output
+      artifact: docker_output_$(Architecture)
