--- a/eng/pipelines/templates/jobs/verify-packages.yml
+++ b/eng/pipelines/templates/jobs/verify-packages.yml
@@ -27,6 +27,7 @@ jobs:
     ${{ else }}:
       image: $(OSVmImage)
     os: ${{ parameters.OSName }}
+    hostArchitecture: $(HostArchitecture)
 
   steps:
   - checkout: self
