--- a/eng/pipelines/templates/jobs/mcpb/pack-and-sign-mcpb.yml
+++ b/eng/pipelines/templates/jobs/mcpb/pack-and-sign-mcpb.yml
@@ -32,9 +32,17 @@ jobs:
     displayName: "Download binaries_signed"
     artifact: binaries_signed
 
-  # Use .NET SDK 8.0.x to run the MCPB CLI, which currently targets .NET 8.0 for its tool and runtime
+  # Install .NET SDK 10.0.x (required by global.json for dotnet CLI commands)
   - task: UseDotNet@2
-    displayName: "Use .NET SDK 8.0.x"
+    displayName: "Install .NET SDK 10.0.x"
+    retryCountOnTaskFailure: 3
+    inputs:
+      packageType: sdk
+      version: 10.0.x
+
+  # Install .NET SDK 8.0.x (required by MCPB CLI which targets .NET 8.0)
+  - task: UseDotNet@2
+    displayName: "Install .NET SDK 8.0.x"
     retryCountOnTaskFailure: 3
     inputs:
       packageType: sdk
